--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 .externalNativeBuild
 .cxx
 local.properties
+compiler.xml
+.idea/deploymentTargetDropDown.xml
+.idea/gradle.xml
+.idea/kotlinc.xml
+.idea/migrations.xml
+.idea/misc.xml
+.idea/vcs.xml
