--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,9 @@ espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.1"
 activity-compose = "1.7.0"
 compose-bom = "2023.08.00"
+dagger = "2.50"
+retrofit = "2.9.0"
+okhttp = "4.11.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -24,6 +27,11 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+dagger = { group = "com.google.dagger", name = "dagger", version.ref = "dagger" }
+daggercompiler = { group="com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
+retrofit = { group="com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofitgson = { group="com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+okhttp = { group="com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
